--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/Release
 node_modules/
 jspm_packages/
 
+
 # TypeScript v1 declaration files
 typings/
 
@@ -102,3 +103,9 @@ dist
 
 # TernJS port file
 .tern-port
+
+# WebStorm
+.idea/
+
+# Config Files
+config/
